--- a/PersonaStruts2Tiles/src/main/webapp/index.html
+++ b/PersonaStruts2Tiles/src/main/webapp/index.html
@@ -5,6 +5,6 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <a href="personas">Entrar en el sistema</a>
+        <a href="bienvenidoAction">Entrar en el sistema</a>
     </body>
 </html>
